--- a/R_Programming_Alt/Matrices_and_Data_Frames/lesson.yaml
+++ b/R_Programming_Alt/Matrices_and_Data_Frames/lesson.yaml
@@ -1,121 +1,123 @@
 - Class: meta
-  Course: R Programming
-  Lesson: Matrices and Data Frames
-  Author: Nick Carchedi
+  Course: Programação em R
+  Lesson: Matrizes e Data Frames
+  Author: Nick Carchedi, Clarice S. Groeneveld (tradução)
   Type: Standard
   Organization: JHU Biostat
   Version: 2.2.0
 
 - Class: text
-  Output: In this lesson, we'll cover matrices and data frames. Both represent 'rectangular' data types, meaning that they are used to store tabular data, with rows and columns.
+  Output: Nesta lição, vamos cobrir matrizes e data frames. Ambos representam tipos de dados 'retangulares', o que quer dizer que são usados para armazenar dados tabulares, com linhas e colunas.
 
 - Class: text
-  Output: The main difference, as you'll see, is that matrices can only contain a single class of data, while data frames can consist of many different classes of data.
+  Output: A principal diferença, como você verá, é que matrizes podem conter somente uma classe de dados, enquanto data frames podem consistir de várias classes de dados diferentes.
 
 - Class: cmd_question
-  Output: Let's create a vector containing the numbers 1 through 20 using the `:` operator. Store the result in a variable called my_vector.
-  CorrectAnswer: my_vector <- 1:20
-  AnswerTests: omnitest(correctExpr='my_vector <- 1:20')
-  Hint: You learned about the `:` operator in the lesson on sequences. If you wanted to create a vector containing the numbers 1, 2, and 3 (in that order), you could use either c(1, 2, 3) or 1:3. In this case, we want the numbers 1 through 20 stored in a variable called my_vector. Also, remember that you don't need the c() function when using `:`.
+  Output: Vamos criar um vetor contendo os números de 1 a 20 usando o operador `:`. Armazene o resultado em uma variável chamada meu_vetor.
+  CorrectAnswer: meu_vetor <- 1:20
+  AnswerTests: omnitest(correctExpr='meu_vetor <- 1:20')
+  Hint: Você aprendeu sobre o operador `:` na lição sobre sequências. Se você quiser criar um vetor contendo os números 1, 2 e 3 (nesta ordem), você pode usar tanto c(1, 2, 3) quanto 1:3. Neste caso, queremos os números de 1 a 20 armazenados em uma variável chamada meu_vetor. Além disso, lembre-se que você não precisa da função c() quando usar `:`.
 
 - Class: cmd_question
-  Output: View the contents of the vector you just created.
-  CorrectAnswer: my_vector
-  AnswerTests: omnitest(correctExpr='my_vector')
-  Hint: Type my_vector to view its contents.
+  Output: Veja o conteúdo do vetor que você criou.
+  CorrectAnswer: meu_vetor
+  AnswerTests: omnitest(correctExpr='meu_vetor')
+  Hint: Digite meu_vetor para ver seus conteúdos.
 
 - Class: cmd_question
-  Output: The dim() function tells us the 'dimensions' of an object. What happens if we do dim(my_vector)? Give it a try.
-  CorrectAnswer: dim(my_vector)
-  AnswerTests: omnitest(correctExpr='dim(my_vector)')
-  Hint: Just type dim(my_vector) to see what happens.
+  Output: A função dim() nos apresenta as 'dimensões' de um objeto. O que acontece se nós fizermos dim(meu_vetor)? Teste para ver o resultado.
+  CorrectAnswer: dim(meu_vetor)
+  AnswerTests: omnitest(correctExpr='dim(meu_vetor)')
+  Hint: Só digite dim(meu_vetor) para ver o que acontece.
 
 - Class: cmd_question
-  Output: Clearly, that's not very helpful! Since my_vector is a vector, it doesn't have a `dim` attribute (so it's just NULL), but we can find its length using the length() function. Try that now.
-  CorrectAnswer: length(my_vector)
-  AnswerTests: omnitest(correctExpr='length(my_vector)')
-  Hint: Type length(my_vector) to view the length of the vector you just created.
+  Output: Claramente, isto não é muito útil! Já que meu_vetor é um vetor, ele não tem um atributo 'dim' (então é só nulo (NULL)), mas podemos encontrar seu comprimento usando a função length(). Tente isso agora.
+  CorrectAnswer: length(meu_vetor)
+  AnswerTests: omnitest(correctExpr='length(meu_vetor)')
+  Hint: Digite length(meu_vetor) para ver o comprimento do vetor que você acabou de criar.
 
 - Class: cmd_question
-  Output: Ah! That's what we wanted. But, what happens if we give my_vector a `dim` attribute? Let's give it a try. Type dim(my_vector) <- c(4, 5).
-  CorrectAnswer: dim(my_vector) <- c(4, 5)
-  AnswerTests: omnitest(correctExpr='dim(my_vector) <- c(4, 5)')
-  Hint: Type dim(my_vector) <- c(4, 5) to give my_vector a `dim` attribute.
+  Output: Ah! Era isso que queríamos. Mas, o que acontece se você der a meu_vetor um atributo `dim`. Vamos testar. Digite dim(meu_vetor) <- c(4, 5).
+  CorrectAnswer: dim(meu_vetor) <- c(4, 5)
+  AnswerTests: omnitest(correctExpr='dim(meu_vetor) <- c(4, 5)')
+  Hint: Digite dim(meu_vetor) <- c(4, 5) para dar um atributo `dim` ao meu_vetor.
 
 - Class: text
-  Output: It's okay if that last command seemed a little strange to you. It should! The dim() function allows you to get OR set the `dim` attribute for an R object. In this case, we assigned the value c(4, 5) to the `dim` attribute of my_vector.
+  Output: Não tem problema se o último comando pareceu um pouco estranho. Ele deveria! A função dim() permite que você receba ou atribua o atributo `dim` para um objeto R. Neste caso, nós atribuímos o valor c(4, 5) ao atributo `dim` de meu_vetor.
 
 - Class: cmd_question
-  Output: Use dim(my_vector) to confirm that we've set the `dim` attribute correctly.
-  CorrectAnswer: dim(my_vector)
-  AnswerTests: omnitest(correctExpr='dim(my_vector)')
-  Hint: Just type dim(my_vector) to make sure the `dim` attribute has been set.
+  Output: Use dim(meu_vetor) para confirmar que atribuímos o atributo `dim` corretamente.
+  CorrectAnswer: dim(meu_vetor)
+  AnswerTests: omnitest(correctExpr='dim(meu_vetor)')
+  Hint: Apenas digite dim(meu_vetor) para se certificar que o atributo `dim` foi estabelecido.
 
 - Class: cmd_question
-  Output: Another way to see this is by calling the attributes() function on my_vector. Try it now.
-  CorrectAnswer: attributes(my_vector)
-  AnswerTests: omnitest(correctExpr='attributes(my_vector)')
-  Hint: The command attributes(my_vector) will show you all of the attributes for the my_vector object.
+  Output: Outra forma de fazer isso é chamando a função attributes() com meu_vetor. Tente isso agora.
+  CorrectAnswer: attributes(meu_vetor)
+  AnswerTests: omnitest(correctExpr='attributes(meu_vetor)')
+  Hint: O comando attributes(meu_vetor) vai mostrar todos os atributos para o objeto meu vetor.
 
 - Class: text
-  Output: Just like in math class, when dealing with a 2-dimensional object (think rectangular table), the first number is the number of rows and the second is the number of columns. Therefore, we just gave my_vector 4 rows and 5 columns.
+  Output: Assim como na aula de matemática, quando lidamos com objetos bi-dimensionais (pense em uma mesa retangular), o primeiro número é o número de linhas e o segundo é o número de colunas. Portanto, acabamos de dar a meu_vetor 4 linhas e 5 colunas.
 
 - Class: cmd_question
-  Output: But, wait! That doesn't sound like a vector any more. Well, it's not. Now it's a matrix. View the contents of my_vector now to see what it looks like.
-  CorrectAnswer: my_vector
-  AnswerTests: omnitest(correctExpr='my_vector')
-  Hint: Type my_vector to view its contents.
+  Output: Mas espere! Isso não parece mais um vetor. Bem, não é. Agora é uma matriz. Acesse os conteúdos de meu_vetor para ver sua aparência.
+  CorrectAnswer: meu_vetor
+  AnswerTests: omnitest(correctExpr='meu_vetor')
+  Hint: Digite meu_vetor para ver seus conteúdos.
 
 - Class: cmd_question
-  Output: Now, let's confirm it's actually a matrix by using the class() function. Type class(my_vector) to see what I mean.
-  CorrectAnswer: class(my_vector)
-  AnswerTests: omnitest(correctExpr='class(my_vector)')
-  Hint: Type class(my_vector) to view the class of my_vector.
+  Output: Agora, vamos confirmar que é realmente uma matriz usando a função class(). Digite class(meu_vetor) para entender o que quero dizer.
+  CorrectAnswer: class(meu_vetor)
+  AnswerTests: omnitest(correctExpr='class(meu_vetor)')
+  Hint: Digite class(meu_vetor) para ver a classe de meu_vetor.
 
 - Class: cmd_question
-  Output: Sure enough, my_vector is now a matrix. We should store it in a new variable that helps us remember what it is. Store the value of my_vector in a new variable called my_matrix.
-  CorrectAnswer: my_matrix <- my_vector
-  AnswerTests: omnitest(correctExpr='my_matrix <- my_vector')
-  Hint: Since we can't just change the name of our my_vector variable, we'll assign its value to a new variable with my_matrix <- my_vector.
+  Output: Realmente, meu_vetor agora agora é uma matriz. Precisamos armazená-lo em uma nova variável para lembrar o que ele é. Guarde o valor de meu_vetor em uma nova variável chamada minha_matriz.
+  CorrectAnswer: minha_matriz <- meu_vetor
+  AnswerTests: omnitest(correctExpr='minha_matriz <- meu_vetor')
+  Hint: Já que não podemos mudar o nome da variável meu_vetor, vamos desginar o seu valor a uma nova variável com minha_matriz <- meu_vetor.
 
 - Class: text
-  Output: The example that we've used so far was meant to illustrate the point that a matrix is simply an atomic vector with a dimension attribute. A more direct method of creating the same matrix uses the matrix() function.
+  Output: O exemplo que usamos até agora tem a intenção de ilustrar que uma matriz é simplesmente um vetor atômico com um atributo dimensão. Uma forma mais direta que criar a mesma matriz é usando a função matrix().
 
 - Class: cmd_question
-  Output: Bring up the help file for the matrix() function now using the `?` function.
+  Output: Chame o arquivo de ajuda para a função matrix() usando a função `?`.
   CorrectAnswer: ?matrix
   AnswerTests: omnitest(correctExpr='?matrix')
-  Hint: The command ?matrix will do the trick.
+  Hint: O comando ?matrix vai fazer a mágica.
 
 - Class: cmd_question
-  Output: Now, look at the documentation for the matrix function and see if you can figure out how to create a matrix containing the same numbers (1-20) and dimensions (4 rows, 5 columns) by calling the matrix() function. Store the result in a variable called my_matrix2.
-  CorrectAnswer: my_matrix2 <- matrix(1:20, nrow=4, ncol=5)
-  AnswerTests: calculates_same_value('matrix(1:20, nrow=4, ncol=5)'); expr_creates_var('my_matrix2')
-  Hint: Call the matrix() function with three arguments -- 1:20, the number of rows, and the number of columns. Be sure to specify arguments by their proper names and store the result in my_matrix2 (not in my_matrix).
+  Output: Agora, olhe a documentação para a função matrix() e veja se você consegue entender como criar uma matriz contendo os mesmos números (1-20) e dimensões (4 linhas, 5 colunas) chamando a função matrix(). Guarde o resultado em uma variável chamada minha_matriz2.
+  CorrectAnswer: minha_matriz2 <- matrix(1:20, nrow=4, ncol=5)
+  AnswerTests: calculates_same_value('matrix(1:20, nrow=4, ncol=5)'); expr_creates_var('minha_matriz2')
+  Hint: Chame a função matrix() com três argumentos – 1:20, o número de linhas e o número de colunas. Cuide para especificar arguemntos com seus nomes corretos e armazenar o resultado em minha_matriz2 (não minha_matriz).
 
 - Class: cmd_question
-  Output: Finally, let's confirm that my_matrix and my_matrix2 are actually identical. The identical() function will tell us if its first two arguments are the same. Try it out.
-  CorrectAnswer: identical(my_matrix, my_matrix2)
-  AnswerTests: any_of_exprs('identical(my_matrix, my_matrix2)', 'identical(my_matrix2, my_matrix)')
-  Hint: If you're not sure about this one, then checkout the documentation for identical() using the `?` function.
+  Output: Finalmente, vamos confirmar que minha_matriz e minha_matriz2 são realmente idênticas. A função identical() vai nos dizer se os dois primeiros argumentos são os mesmos. Tente usar ela.
+
+Finally, let's confirm that minha_matriz and minha_matriz2 are actually identical. The identical() function will tell us if its first two arguments are the same. Try it out.
+  CorrectAnswer: identical(minha_matriz, minha_matriz2)
+  AnswerTests: any_of_exprs('identical(minha_matriz, minha_matriz2)', 'identical(minha_matriz2, minha_matriz)')
+  Hint: Se não tiver certeza de o que fazer, leia a documentação para identical() usando a função `?`.
 
 - Class: text
-  Output: Now, imagine that the numbers in our table represent some measurements from a clinical experiment, where each row represents one patient and each column represents one variable for which measurements were taken.
+  Output: Agora, iamgine que os números na nossa tabela representam medidas de um experimento clínico, onde cada linha é um paciente e cada coluna representa uma variável para qual medidas foram tiradas.
 
 - Class: text
-  Output: We may want to label the rows, so that we know which numbers belong to each patient in the experiment. One way to do this is to add a column to the matrix, which contains the names of all four people.
+  Output: Nós podemos querer nomear nossas linhas para sabermos qual número pertence a qual paciente no experimento. Uma forma de fazer isso é adicionar uma coluna à matriz, que contém os nomes das quatro pessoas.
 
 - Class: cmd_question
-  Output: Let's start by creating a character vector containing the names of our patients -- Bill, Gina, Kelly, and Sean. Remember that double quotes tell R that something is a character string. Store the result in a variable called patients.
-  CorrectAnswer: patients <- c("Bill", "Gina", "Kelly", "Sean")
-  AnswerTests: omnitest(correctExpr='patients <- c("Bill", "Gina", "Kelly", "Sean")')
-  Hint: Make sure to capitalize the first letter of each name and to store the result in a variable called patients. Also, don't get the order of the patients mixed up! That would be a disaster!
+  Output: Vamos começar criando um vetor de caracteres contendo os nomes de nossos pacientes -- Bill, Gina, Kelly, and Sean.  Lembre-se que aspas duplas contam ao R que algo é uma string de caracteres. Guarde o resultado em um vetor chamado pacientes.
+  CorrectAnswer: pacientes <- c("Bill", "Gina", "Kelly", "Sean")
+  AnswerTests: omnitest(correctExpr='pacientes <- c("Bill", "Gina", "Kelly", "Sean")')
+  Hint: Certifique-se que a primeira letra de cada nome está maiúscula e guarde o resultado em uma variável pacientes. Não misture a ordem dos pacientes! Isso seria desastroso!
 
 - Class: cmd_question
-  Output: Now we'll use the cbind() function to 'combine columns'. Don't worry about storing the result in a new variable. Just call cbind() with two arguments -- the patients vector and my_matrix.
-  CorrectAnswer: cbind(patients, my_matrix)
-  AnswerTests: omnitest(correctExpr='cbind(patients, my_matrix)')
-  Hint: Type cbind(patients, my_matrix) to add the names of our patients to the matrix of numbers.
+  Output: Now we'll use the cbind() function to 'combine columns'. Don't worry about storing the result in a new variable. Just call cbind() with two arguments -- the pacientes vector and minha_matriz.
+  CorrectAnswer: cbind(pacientes, minha_matriz)
+  AnswerTests: omnitest(correctExpr='cbind(pacientes, minha_matriz)')
+  Hint: Type cbind(pacientes, minha_matriz) to add the names of our pacientes to the matrix of numbers.
 
 - Class: text
   Output: Something is fishy about our result! It appears that combining the character vector with our matrix of numbers caused everything to be enclosed in double quotes. This means we're left with a matrix of character strings, which is no good.
@@ -124,13 +126,13 @@
   Output: If you remember back to the beginning of this lesson, I told you that matrices can only contain ONE class of data. Therefore, when we tried to combine a character vector with a numeric matrix, R was forced to 'coerce' the numbers to characters, hence the double quotes.
 
 - Class: text
-  Output: This is called 'implicit coercion', because we didn't ask for it. It just happened. But why didn't R just convert the names of our patients to numbers? I'll let you ponder that question on your own.
+  Output: This is called 'implicit coercion', because we didn't ask for it. It just happened. But why didn't R just convert the names of our pacientes to numbers? I'll let you ponder that question on your own.
 
 - Class: cmd_question
-  Output: So, we're still left with the question of how to include the names of our patients in the table without destroying the integrity of our numeric data. Try the following -- my_data <- data.frame(patients, my_matrix)
-  CorrectAnswer: my_data <- data.frame(patients, my_matrix)
-  AnswerTests: omnitest(correctExpr='my_data <- data.frame(patients, my_matrix)')
-  Hint: Type my_data <- data.frame(patients, my_matrix), so we can explore what happens.
+  Output: So, we're still left with the question of how to include the names of our pacientes in the table without destroying the integrity of our numeric data. Try the following -- my_data <- data.frame(pacientes, minha_matriz)
+  CorrectAnswer: my_data <- data.frame(pacientes, minha_matriz)
+  AnswerTests: omnitest(correctExpr='my_data <- data.frame(pacientes, minha_matriz)')
+  Hint: Type my_data <- data.frame(pacientes, minha_matriz), so we can explore what happens.
 
 - Class: cmd_question
   Output: Now view the contents of my_data to see what we've come up with.
