--- a/R_Programming_Alt/Graficos_Basicos/lesson.yaml
+++ b/R_Programming_Alt/Graficos_Basicos/lesson.yaml
@@ -1,7 +1,7 @@
 - Class: meta
   Course: Programação em R
   Lesson: Gráficos Básicos
-  Author: David Kane, Kelin Gonçalves de Oliveira (Tradução)
+  Author: David Kane, Kelin Gonçalves de Oliveira (Tradução e Modificação)
   Type: Standard
   Organization: Williams College
   Version: 2.2.0
@@ -10,7 +10,7 @@
   Output: Uma das vantagens do R em relação às outras linguagens de programação, é a facilidade de criar gráficos com qualidade para serem publicadas. Nesta lição, você aprenderá sobre os gráficos básicos em R. 
 
 - Class: text
-  Output: Nós não iremos cobrir os tópicos avançados de gráficos em R nesta lição.
+  Output: Nós não iremos cobrir os tópicos mais avançados de gráficos em R nesta lição.
 
 - Class: cmd_question
   Output: Para iniciar, carregue o dataframe de nome cars com data(cars).
@@ -19,113 +19,99 @@
   Hint: Digite data(cars) para carregar os dados.
 
 - Class: text
-  Output: To fix ideas, we will work with simple data frames. Our main goal is to introduce various plotting functions and their arguments. All the output would look more interesting with larger, more complex data sets.
+  Output: De início, nós iremos trabalhar com dataframes simples, já que o objetivo principal é apresentar diversas funções de gráficos e seus argumentos. Claro que conjuntos de dados mais complexos produzem grafos mais interessantes.
 
 - Class: cmd_question
-  Output: Pull up the help page for cars.
+  Output: Abra a ajuda para entender o dataset cars.
   CorrectAnswer: ?cars
-  AnswerTests: any_of_exprs('?cars', 'help(cars)', 'help("plot")')
-  Hint: Type ?cars or help(cars) to view a help page with details on the car data frame.
+  AnswerTests: any_of_exprs('?cars', 'help(cars)')
+  Hint: Digite ?cars ou help(cars) para visualizar a página de ajuda que contém os detalhes do dataframe cars.
 
 - Class: text
-  Output: "As you can see in the help page, the cars data set has only two variables: speed and stopping distance. Note that the data is from the 1920s."
+  Output: "Como você pode observar na página de ajuda, cars contém apenas duas variáveis coletadas: velocidade (mph) e distância de parada (ft). Observe que o dado é de 1920."
 
 - Class: cmd_question
-  Output: Run head() on the cars data.
+  Output: Aplique a função head() no dataset cars.
   CorrectAnswer: head(cars)
   AnswerTests: omnitest(correctExpr='head(cars)')
-  Hint: Type head(cars) to see the top of the cars data frame.
+  Hint: Digite head(cars) para ver o topo do dataframe.
 
 - Class: text
-  Output: Before plotting, it is always a good idea to get a sense of the data. Key R commands for doing so include, dim(), names(), head(), tail() and summary().
+  Output: Sempre antes de iniciar com os plots, é bom ter uma idéia de como são os dados que você está trabalhando. Para obter mais informações sobre teu conjunto de dados, comandos-chave do R como dim(), names(), head(), tail() e summary(), vão te ajudar bastante.
 
 - Class: cmd_question
-  Output: Run the plot() command on the cars data frame. 
+  Output: Utilize a função plot() no conjunto de dados cars para criar um gráfico de dispersão (scatter plor). 
   CorrectAnswer: plot(cars)
   AnswerTests: omnitest(correctExpr='plot(cars)')
-  Hint: Type plot(cars) to create a plot of the cars data frame.
+  Hint: Digite plot(cars) para criar um scatter plot.
 
 - Class: text
-  Output: As always, R tries very hard to give you something sensible given the information that you have provided to it. First, R notes that the data frame you have given it has just two columns, so it assumes that you want to plot one column versus the other.
+  Output: 'Como sempre, a linguagem R é sempre bastante sensitiva quanto ao tipo de informação que você forneceu, por exemplo: o R notou que a tablea de dados que você inseriu contém apenas duas colunas, então ele assumiu que deve plotar uma coluna versos a outra.'
 
 - Class: text
-  Output: Second, since we do not provide labels for either axis, R uses the names of the columns. Third, it creates axis tick marks at nice round numbers and labels them accordingly. Fourth, it uses the other defaults supplied in plot().
+  Output: Como não foi fornecido nenhum nome para os eixos do gráfico, R também presumiu que deve nomear os eixos conforme o nome das colunas. A fim de melhorar a visualização, a linguagem também inseriu marcações nos números inteiros nos eixos.
 
 - Class: text
-  Output: We will now spend some time exploring plot, but many of the topics covered here will apply to most other R graphics functions. Note that 'plot' is short for scatterplot.
+  Output: Vamos explorar a função plot().
 
 - Class: cmd_question
-  Output: Look up the help page for plot(). 
+  Output: Abra a página de ajuda sobre plot(). 
   CorrectAnswer: ?plot
   AnswerTests: any_of_exprs('?plot', 'help(plot)')
-  Hint: Type ?plot or help(plot) to view a help page for plot().
+  Hint: Digite ?plot ou help(plot) para visualizar a página de ajuda de plot().
 
 - Class: text
-  Output: The help page for plot() highlights the different arguments that the function can take. The two most important are x and y, the variables that will be plotted. For the next set of questions, include the argument names in your answers. That is, do not type plot(cars$speed, cars$dist), although that will work. Instead, use plot(x = cars$speed, y = cars$dist).
+  Output: O help de plot() mostra os argumentos necessários que a função recebe para funcionar, sendo que há argumentos obrigatórios (sem os quais a função não funciona) e os opcionais (geramente relacionados com personalização). Os argumentos mais importantes da função plot são x e y, que correspondem às variáveis a serem plotadas (no teu caso, x é speed e y é dist), the variables that will be plotted. 
+
+- Class: text
+  Output: 'Para as próximas questões, vamos especificar na função os nomes dos argumentos que vão receber as variáveis a serem plotadas, ou seja, ao invés de digitar plot(cars) ou plot(cars$speed, cars$dist) que também funcionam, vamos usar: plot(x = cars$speed, y = cars$dist).'
 
 - Class: cmd_question
-  Output: Use plot() command to show speed on the x-axis and dist on the y-axis from the cars data frame. Use the form of the plot command in which vectors are explicitly passed in as arguments for x and y.
-  CorrectAnswer: plot(x = cars$speed, y = cars$dist)
-  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist)')
-  Hint: Type plot(x = cars$speed, y = cars$dist) to create the plot.
-
-- Class: text
-  Output: Note that this produces a slightly different answer than plot(cars). In this case, R is not sure what you want to use as the labels on the axes, so it just uses the arguments which you pass in, data frame name and dollar signs included.
-
-- Class: text
-  Output: Note that there are other ways to call the plot command, i.e., using the "formula" interface. For example, we get a similar plot to the above with plot(dist ~ speed, cars). However, we will wait till later in the lesson before using the formula interface.
-  
-- Class: cmd_question
-  Output: Use plot() command to show dist on the x-axis and speed on the y-axis from the cars data frame. This is the opposite of what we did above.
+  Output: Utilize o comando plot() para plotar o gráfico de dispersão invertido, com dist no eixo x e velocidade no eixo y. Faça conforme o exemplo que mostramos acima.
   CorrectAnswer: plot(x = cars$dist, y = cars$speed)
   AnswerTests: omnitest(correctExpr='plot(x = cars$dist, y = cars$speed)')
-  Hint: Type plot(x = cars$dist, y = cars$speed) to create the plot.
+  Hint: Digite plot(x = cars$dist, y = cars$speed) para criar o gŕafico.
 
 - Class: text
-  Output: It probably makes more sense for speed to go on the x-axis since stopping distance is a function of speed more than the other way around. So, for the rest of the questions in this portion of the lesson, always assign the arguments accordingly.
+  Output: Observe que este resultado é diferente do obtido por plot(cars). Neste caso, além de termos trocado a ordem dos eixos, o R não teve a certeza de que você deseja utilizar os nomes das colunas para nomear, então preferiu apenas utilizar os argumentos que você passou como nome dos eixos (cars$speed, por exemplo).
 
 - Class: text
-  Output: In fact, you can assume that the answers to the next few questions are all of the form plot(x = cars$speed, y = cars$dist, ...) but with various arguments used in place of the ...
-
-- Class: cmd_question
-  Output: Recreate the plot with the label of the x-axis set to "Speed". 
-  CorrectAnswer: plot(x = cars$speed, y = cars$dist, xlab = "Speed")
-  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist, xlab = "Speed")')
-  Hint: Type plot(x = cars$speed, y = cars$dist, xlab = "Speed") to create the plot.
-
-- Class: cmd_question
-  Output: Recreate the plot with the label of the y-axis set to "Stopping Distance". 
-  CorrectAnswer: plot(x = cars$speed, y = cars$dist, ylab = "Stopping Distance")
-  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist, ylab = "Stopping Distance")')
-  Hint: Type plot(x = cars$speed, y = cars$dist, ylab = "Stopping Distance") to create the plot.
-
-- Class: cmd_question
-  Output: Recreate the plot with "Speed" and "Stopping Distance" as axis labels. 
-  CorrectAnswer: plot(x = cars$speed, y = cars$dist, xlab = "Speed", ylab = "Stopping Distance")
-  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist, xlab = "Speed", ylab = "Stopping Distance")')
-  Hint: Type plot(x = cars$speed, y = cars$dist, xlab = "Speed", ylab = "Stopping Distance") to create the plot.
+  Output: Provavelmente, faz mais sentido ter a velocidade dos carros no eixo x, já que a distância de freagem é uma variável em função da velocidade (quanto maior a velocidade, mais espaço o carro precisará para parar completamente) e não o contrário.
 
 - Class: text
-  Output: The reason that plots(cars) worked at the beginning of the lesson was that R was smart enough to know that the first element (i.e., the first column) in cars should be assigned to the x argument and the second element to the y argument. To save on typing, the next set of answers will all be of the form, plot(cars, ...) with various arguments added.
-
-- Class: text
-  Output: For each question, we will only want one additional argument at a time. Of course, you can pass in more than one argument when doing a real project.
+  Output: 'Há outras maneiras de utilizar o comando de plot, utilizando uma "fórmula", por exemplo: plot(dist ~ speed, cars). No entanto, ainda não iremos utilizar esta forma. Primeiro, vamos explorar os argumentos opcionas da função.'
+  
 
 - Class: cmd_question
-  Output: Plot cars with a main title of "My Plot". Note that the argument for the main title is "main" not "title".
-  CorrectAnswer: plot(cars, main = "My Plot")
-  AnswerTests: omnitest(correctExpr='plot(cars, main = "My Plot")')
-  Hint: Type plot(cars, main = "My Plot") to create the plot.
+  Output: Recrie o plot (com velocidade no eixo x e distância no eixo y) e coloque o nome do eixo x como "Velocidade (mph)", inserindo o argumento xlab = "nome_do_eixoX". 
+  CorrectAnswer: plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)")
+  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)")')
+  Hint: Coloque plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)") para criar o plot.
 
 - Class: cmd_question
-  Output: Plot cars with a sub title of "My Plot Subtitle".
-  CorrectAnswer: plot(cars, sub = "My Plot Subtitle")
-  AnswerTests: omnitest(correctExpr='plot(cars, sub = "My Plot Subtitle")')
-  Hint: Type plot(cars, sub = "My Plot Subtitle") to create the plot.
+  Output: Repita o comando mantendo o nome do eixo x, mas inserindo em seguida o nome "Distância (ft)" para o eixo y com ylab = "nome_do_eixoY". 
+  CorrectAnswer: plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)", ylab = "Distância (ft)")
+  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)", ylab = "Distância (ft)")')
+  Hint: Digite plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)", ylab = "Distância (ft)") para criar o plot.
 
 - Class: text
-  Output: The plot help page (?plot) only covers a small number of the many arguments that can be passed in to plot() and to other graphical functions. To begin to explore the many other options, look at ?par. Let's look at some of the more commonly used ones. Continue using plot(cars, ...) as the base answer to these questions.
+  Output: Também é interessante colocar um título no gráfico, a fim de deixá-lo mais didático.
 
+- Class: cmd_question
+  Output: Faça o gráfico conforme foi feito acima e ao final dos argumentos, coloque o título "Velocidade do Carro vs Distância de Freagem". O argumento para adicionar títulos é main = "título".
+  CorrectAnswer: plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)", ylab = "Distância (ft)", main = "Velocidade do Carro vs Distância de Freagem")
+  AnswerTests: omnitest(correctExpr='plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)", ylab = "Distância (ft)", main = "Velocidade do Carro vs Distância de Freagem")')
+  Hint: Digite plot(x = cars$speed, y = cars$dist, xlab = "Velocidade (mph)", ylab = "Distância (ft)", main = "Velocidade do Carro vs Distância de Freagem") para criar o plot.
+
+- Class: text
+  Output: Como você deve ter visto, o ?plot ou help(plot) retorna a sintaxe de alguns argumentos apenas. Para podermos explorar outras funções gráficas, vamor olhar para a função par() que, quando combinada com plot fornece várias outras formas de melhorar o gráfico. and to other graphical functions.
+
+- Class: cmd_question
+  Output: Olhe a página de ajuda para a função par.
+  CorrectAnswer: ?par
+  AnswerTests: any_of_exprs('?par', 'help(par)')
+  Hint: Digite ?par ou help(par) para visualizar a página de ajuda desta função.
+  
 - Class: cmd_question
   Output: Plot cars so that the plotted points are colored red. (Use col = 2 to achieve this effect.)
   CorrectAnswer: plot(cars, col = 2)
